<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>fr.croixrouge</groupId>
    <artifactId>croixrouge</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>web-api</module>
        <module>core</module>
        <module>event</module>
        <module>stock</module>
        <module>repository</module>
        <module>croix-rouge-repository</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>
